Fix #2091